# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.60 2009/12/07 10:09:16 mae Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/12/07) Fixed bug#3907 - Caching function not working due to wrong
    hardcoded umask.
 - (2009/12/02) Fixed bug#4613 - Umlauts in <OTRS_*> variable and also on whole
    message are not show right with ArticleStorageFS.
 - (2009/12/02) Fixed bug#3667 - E-mail notification link is wrong when using
    FastCGI.
 - (2009/11/25) Fixed bug#4498 - Rich text editor places whitespace in front of
    lines in plain text mail body.
 - (2009/11/23) Fixed bug#4128 - Signature line breaks are stripped in
    E-Mail-Ticket.
 - (2009/11/18) Fixed bug#4319 - 'no quotable message' error for old messages
    after upgrade.
 - (2009/11/18) Added FastCGI handle for web installer.
 - (2009/11/17) Fixed bug#4299 - Image Upload in Signature Management fails.
 - (2009/11/16) Fixed bug#4464 - Spell checker (WYSIWIG + ispell) causes
    exceptions sometimes.
 - (2009/11/16) Fixed bug#4507 - Add Ticket Events for SLAUpdate, ServiceUpdate,
    and TicketTypeUpdate in AdminNotificationEvent UI.
 - (2009/11/16) Fixed bug#4509 - Notification (event based) comments are not
    saved.
 - (2009/11/06) Fixed bug#2069 - Update of customer company id in admin
    interface failed.
 - (2009/11/06) Fixed bug#2948 - Renamed crypt option "md5" to "md5-crypt" to
    avoid missunderstanding.
 - (2009/10/30) Fixed JS Month check in frontend files.
 - (2009/10/26) Fixed bug#4455 - Input field in Preferences of a Dashboard
    module doesn't save settings.
 - (2009/10/26) Fixed bug#4454 - restore.pl is not working.
 - (2009/10/26) Fixed bug#4447 - TimeUnits not saved in AgentTicketMove.pm when
    omitting a note.