@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.60 2009/12/07 10:09:16 mae Exp $
+# $Id: CHANGES,v 1.993.2.61 2009/12/07 10:21:43 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/12/07) Fixed bug#4477 - Uninitialized Value issue with Redirect()
+    function in Layout.pm.
  - (2009/12/07) Fixed bug#3907 - Caching function not working due to wrong
     hardcoded umask.
  - (2009/12/02) Fixed bug#4613 - Umlauts in <OTRS_*> variable and also on whole
